Integrated warn system and fixed issues
Signed-off-by: Ivo Quiring <falk.quiring@gmail.com>